apps/semaphore/base/ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: semaphore
  namespace: semaphore
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - semaphore.example.com
    secretName: wildcard-tls
  rules:
  - host: semaphore.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: semaphore
            port:
              number: 3000
